修改对广告的处理

--- a/web/src/assets/scss/style.scss
+++ b/web/src/assets/scss/style.scss
@@ -188,7 +188,7 @@ p {
 //sprite 精灵图片
 //使用spritecow.com 对图片进行定位
 .sprite {
-    background: url(../../../../IMG/index.png) no-repeat 0 0;
+    background: url(../index.png) no-repeat 0 0;
     background-size: 28.8462rem;
     display: inline-block;
     &.sprite-news {
